# jp2-pixbuf-loader

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  io-jp2.c  jp2-pixbuf.thumbnailer.in  meson.build
src/: color.h  io-jp2.c  util.h  utilities.h
tests/: advanced.jp2  basic.c  basic.jp2  cmyk.c  complex.jp2  large.c  loaders.cache.in  meson.build  minimal.c  minimal.jp2  normal.c  relax.c  save.c
